# diet

./: .dockerignore  .env_sample  .gitignore  Dockerfile  README.md  docker-compose.yaml  my_commands.md  poc.py  pyproject.toml  requirements.txt
.github/: dependabot.yaml  pull_request_template.md
.github/actions/setup-python-env/: action.yml
.github/workflows/: lint.yaml  lint.yml  test.yaml  test.yml
apps/: app.py  config.py  dash_app.py  forms.py  models.py  views.py
apps/auth/: forms.py  models.py  repository.py  service.py  views.py
apps/auth/repositories/: user_repository.py
apps/auth/services/: user_service.py
apps/body_composition/: forms.py  models.py  repository.py  service.py  views.py
apps/body_composition/services/: body_composition_service.py  sample_body_composition_service.py
apps/body_composition/utils/: body_composition_util.py
apps/static/: bodyCompositionVisualization.css  bodyCompositionVisualization.js  color-modes.css  dash_style.css  flask_style.css  style.css
apps/templates/: 404.html  500.html  _base.html  _color_modes.html  _form_fields.html  _header.html  base.html  index.html  log_body_composition.html  log_weight.html  signin.html  signup.html
apps/utils/: custom_logger.py  directory_manager.py  directory_util.py  singleton_logger.py  validation_helper.py  validation_util.py
scripts/: nutrition_optimizer_poc.py  rice_cooking_weight_calculator.py
src/diet/: api_models.py  app.py  config.py  extensions.py  i18n.py  views.py
src/diet/auth/: constants.py  forms.py  models.py  repository.py  service.py  views.py
src/diet/body_composition/: api_models.py  constants.py  forms.py  models.py  repository.py  sample_data.py  service.py  views.py
src/diet/i18n/: __init__.py  auth.py  body_composition.py  common.py  nutrition_optimizer.py  service.py
src/diet/nutrition_optimizer/: api_models.py  models.py  nutrients.py  optimizer.py  poc.py  service.py  views.py
src/diet/static/: bodyCompositionApi.js  bodyCompositionChart.js  bodyCompositionConfig.js  bodyCompositionFilters.js  bodyCompositionTable.js  bodyCompositionVisualization.js  color-modes.js  i18n.js  script.js
src/diet/templates/: 404.html  500.html  _base.html  _color_modes.html  _header.html  index.html
src/diet/utils/: custom_logger.py  transaction.py  validation_util.py
tests/: conftest.py  test_basic.py  test_views.py
tests/diet/: __init__.py  test_api_models.py  test_i18n.py  test_views.py
(+55 files in other folders)
