[project]
name = "diet"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0,<4.0.0",
    "flask-login>=0.6.3,<0.7.0",
    "flask-sqlalchemy>=3.1.1,<4.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "pandas>=3.0.2,<4.0.0",
    "flask-wtf[email]>=1.3.0,<2.0.0",
    "flask-migrate>=4.1.0,<5.0.0",
]

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "djlint>=1.36.4",
    "flask-debugtoolbar>=0.16.0",
    "mypy>=1.15.0",
    "pre-commit>=4.5.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "ruff>=0.15.11",
]

[tool.ruff]
target-version = "py312"
line-length = 79

[tool.ruff.lint]
select = [
    "E",
    "F",
    "UP",
    "B",
    "SIM",
    "I",
    "C90",
]
ignore = []
fixable = ["ALL"]

[tool.ruff.lint.mccabe]
max-complexity = 7

[tool.pytest.ini_options]
addopts = "--cov=diet --cov-config=.coveragerc --cov-report=html"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.djlint]
profile = "jinja"
max_line_length = 79
max_blank_lines=1
